@@ -1,5 +1,14 @@
 2007-10-17  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-private.h:
+        * libnautilus-private/nautilus-file.[ch]:
+        Add can_delete and can_trash
+	
+        * src/file-manager/fm-directory-view.c:
+	Replace some gnome-vfs code with gio code
+
+2007-10-17  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-location-dialog.c (open_current_location): 
 	Use g_file_parse_name instead of gnome_vfs_make_uri_from_input
 	
